updated langchain package version

--- a/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb
+++ b/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb
@@ -64,7 +64,7 @@
         "!pip install -q redis==5.0.8 >> /.tmp\n",
         "!pip install -q langchain==0.2.16 >> /.tmp\n",
         "!pip install -q langchain-core==0.3.6 >> /.tmp\n",
-        "!pip install -q langchain-redis==0.0.4 >> /.tmp\n",
+        "!pip install -q langchain-redis==0.1.1 >> /.tmp\n",
         "!pip install -q langchain-google-genai==2.0.0 >> /.tmp"
       ]
     },
@@ -119,6 +119,7 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "import redis\n",
         "from google.colab import userdata\n",
         "\n",
         "from langchain_redis import RedisChatMessageHistory\n",
@@ -176,6 +177,41 @@
         "  REDIS_PASSWORD=\"\"\n",
         "\n",
         "REDIS_URL = f\"redis://default:{REDIS_PASSWORD}@{REDIS_HOST}:{REDIS_PORT}\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Testing the Connection to Redis"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_connection.png?raw=true\" alt=\"Callout - Make sure connection works\"/>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "r = redis.from_url(REDIS_URL)\n",
+        "\n",
+        "if r.ping():\n",
+        "    print(\"Connection successful!\")\n",
+        "else:\n",
+        "    print(\"Connection issue!\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "&nbsp;"
       ]
     },
     {
@@ -592,31 +628,6 @@
       "metadata": {},
       "source": [
         "Since the conversation history is stored in Redis as documents, we can access them directly for other use cases (for instance, a call center that wants to review the interaction between user and model, or a data sciences team gathering data to fine-tune a conversational model)."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "NDNxn4XlIc6T"
-      },
-      "outputs": [],
-      "source": [
-        "import redis"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "r = redis.from_url(REDIS_URL)\n",
-        "\n",
-        "if r.ping():\n",
-        "    print(\"Connection successful!\")\n",
-        "else:\n",
-        "    print(\"Connection issue!\")"
       ]
     },
     {
