--- a/Labs/03-RAG_Images/03_Redis_RAG_Images.ipynb
+++ b/Labs/03-RAG_Images/03_Redis_RAG_Images.ipynb
@@ -71,23 +71,11 @@
         "!pip install -q langchain==0.2.16 >> /.tmp\n",
         "!pip install -q langchain-core==0.3.6 >> /.tmp\n",
         "!pip install -q langchain-huggingface==0.0.3 >> /.tmp\n",
-        "!pip install -q langchain-redis==0.0.4 >> /.tmp\n",
+        "!pip install -q langchain-redis==0.1.1 >> /.tmp\n",
         "!pip install -q langchain-google-genai==2.0.0 >> /.tmp\n",
         "!pip install -q langchain_experimental==0.3.2 >> /.tmp\n",
         "!pip install -q open-clip-torch==2.26.1 >> /.tmp\n",
         "!pip install -q git+https://github.com/openai/CLIP.git >> /.tmp"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# patch an issue with RedisVL\n",
-        "!wget https://github.com/denisabrantesredis/denisd-GenAI-Workshop/raw/refs/heads/main/_assets/files/semantic.py\n",
-        "!rm /usr/local/lib/python3.10/dist-packages/redisvl/extensions/llmcache/semantic.py\n",
-        "!cp semantic.py /usr/local/lib/python3.10/dist-packages/redisvl/extensions/llmcache/"
       ]
     },
     {
@@ -519,7 +507,7 @@
       "outputs": [],
       "source": [
         "prompt = ChatPromptTemplate.from_messages([\n",
-        "    (\"system\", \"Return the requested response object in {language}. Make sure the marketing description starts with the letter '{starting_letter}'\\n'{format_instructions}'\\n\"),\n",
+        "    (\"system\", \"Return the requested response object in {language} in JSON format. Ensure that the response is in a valid JSON format. Make sure the marketing description starts with the letter '{starting_letter}'\\n'{format_instructions}'\\n\"),\n",
         "    (\"human\", [\n",
         "        {\n",
         "            \"type\": \"image_url\",\n",
