--- a/Labs/01-RAG_VectorDB_Cache/01_Redis_Langchain.ipynb
+++ b/Labs/01-RAG_VectorDB_Cache/01_Redis_Langchain.ipynb
@@ -80,6 +80,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Important: Restart the Runtime after installing the pre-reqs!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Installing Redis Stack Locally\n",
         "If you are not using Redis Cloud as a database, uncomment and run the code below to install Redis locally. Then set your connection to 127.0.0.1"
       ]
@@ -126,6 +133,8 @@
       },
       "outputs": [],
       "source": [
+        "import os\n",
+        "import nltk\n",
         "from typing import List, Optional\n",
         "from enum import Enum\n",
         "from torch import Tensor\n",
@@ -217,6 +226,46 @@
         "                )\n",
         "            ))\n",
         "        return self"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def check_for_nltk_package(package_name: str, package_category: str) -> bool:\n",
+        "    \"\"\"Checks to see if the specified NLTK package exists on the image.\"\"\"\n",
+        "    paths: list[str] = []\n",
+        "    for path in nltk.data.path:\n",
+        "        if not path.endswith(\"nltk_data\"):\n",
+        "            path = os.path.join(path, \"nltk_data\")\n",
+        "        paths.append(path)\n",
+        "\n",
+        "    try:\n",
+        "        nltk.find(f\"{package_category}/{package_name}\", paths=paths)\n",
+        "        return True\n",
+        "    except (LookupError, OSError):\n",
+        "        return False\n",
+        "\n",
+        "\n",
+        "def download_nltk_packages():\n",
+        "    \"\"\"If required NLTK packages are not available, download them.\"\"\"\n",
+        "\n",
+        "    tagger_available = check_for_nltk_package(\n",
+        "        package_category=\"taggers\",\n",
+        "        package_name=\"averaged_perceptron_tagger_eng\",\n",
+        "    )\n",
+        "    tokenizer_available = check_for_nltk_package(\n",
+        "        package_category=\"tokenizers\", package_name=\"punkt_tab\"\n",
+        "    )\n",
+        "\n",
+        "    if (not tokenizer_available) or (not tagger_available):\n",
+        "        nltk.download(\"averaged_perceptron_tagger_eng\", quiet=True)\n",
+        "        nltk.download(\"punkt_tab\", quiet=True)\n",
+        "\n",
+        "# Auto-download NLTK packages if the environment variable is set\n",
+        "download_nltk_packages()"
       ]
     },
     {
