--- a/Labs/03-RAG_Images/03_Redis_RAG_Images.ipynb
+++ b/Labs/03-RAG_Images/03_Redis_RAG_Images.ipynb
@@ -82,6 +82,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Important: Restart the Runtime after installing the pre-reqs!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Installing Redis Stack Locally\n",
         "If you are not using Redis Cloud as a database, uncomment and run the code below to install Redis locally. Then set your connection to 127.0.0.1"
       ]
